[gd_scene load_steps=16 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://left_pad.gd" type="Script" id=2]
[ext_resource path="res://right_pad.gd" type="Script" id=3]
[ext_resource path="res://ball.gd" type="Script" id=4]
[ext_resource path="res://right_bound.gd" type="Script" id=5]
[ext_resource path="res://left_bound.gd" type="Script" id=6]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://mainscene.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.79352
height = 133.589

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.7869
height = 132.872

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 515, 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 514, 2.00006 )

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="RectangleShape2D" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="left_pad" type="KinematicBody2D" parent="."]
position = Vector2( 128, 300 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed = 800

[node name="Sprite" type="Sprite" parent="left_pad"]
scale = Vector2( 0.18, 2.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_pad"]
shape = SubResource( 1 )

[node name="right_pad" type="KinematicBody2D" parent="."]
position = Vector2( 896, 300 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
speed = 800

[node name="Sprite" type="Sprite" parent="right_pad"]
scale = Vector2( 0.18, 2.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_pad"]
shape = SubResource( 2 )

[node name="ball" type="KinematicBody2D" parent="."]
position = Vector2( 512, 300 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ball"]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="ball"]
wait_time = 3.0
one_shot = true

[node name="top_bound" type="KinematicBody2D" parent="."]
position = Vector2( 512, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="top" type="CollisionShape2D" parent="top_bound"]
shape = SubResource( 4 )

[node name="bottom_bound" type="KinematicBody2D" parent="."]
position = Vector2( 512, 600 )
__meta__ = {
"_edit_group_": true
}

[node name="bottom" type="CollisionShape2D" parent="bottom_bound"]
rotation = -3.14159
shape = SubResource( 5 )

[node name="left_bound" type="Area2D" parent="."]
position = Vector2( -20, 300 )
scale = Vector2( 1, 35 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="left_bound"]
shape = SubResource( 6 )

[node name="right_bound" type="Area2D" parent="."]
position = Vector2( 1044, 300 )
scale = Vector2( 1, 35 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_bound"]
shape = SubResource( 7 )

[node name="HUD" parent="." instance=ExtResource( 7 )]
[connection signal="scored" from="." to="ball" method="_on_Node2D_scored"]
[connection signal="won" from="." to="ball" method="_on_Node2D_won"]
[connection signal="won" from="." to="HUD" method="_on_Node2D_won"]
[connection signal="timeout" from="ball/Timer" to="ball" method="_on_Timer_timeout"]
[connection signal="body_entered" from="left_bound" to="." method="_on_left_bound_body_entered"]
[connection signal="body_entered" from="right_bound" to="." method="_on_right_bound_body_entered"]
[connection signal="start_game" from="HUD" to="left_pad" method="_on_HUD_start_game"]
[connection signal="start_game" from="HUD" to="right_pad" method="_on_HUD_start_game"]
[connection signal="start_game" from="HUD" to="ball" method="_on_HUD_start_game"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
